--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="./icono.png" />
   <title>GetSales</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,16 +10,10 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css"
   /> -->
-  <link rel="shortcut icon" href="./icono.png" />
-  <link
-    rel="apple-touch-icon"
-    sizes="76x76"
-    href="./icono.png"
-  />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
 </head>
-<body class="text-gray-900 antialiased">
+<body class="text-gray-900 antialiased bg-gray-200">
   <app-root></app-root>
 </body>
 </html>
